[gd_scene load_steps=16 format=3 uid="uid://cpqlrh88377o1"]

[ext_resource type="Script" uid="uid://b2xa273ecr0ju" path="res://scripts/character_controller/strategies/movement_strategy.gd" id="1_rt3eq"]
[ext_resource type="Script" uid="uid://gp7pi5lovebm" path="res://scripts/weapon_controller/weapon_controller.gd" id="2_hxpf6"]
[ext_resource type="Script" uid="uid://dksuroetqt32s" path="res://scripts/character_controller/strategies/walk_strategy.gd" id="2_vsn0d"]
[ext_resource type="Script" uid="uid://b0jct33h5r1cr" path="res://scripts/character_controller/strategies/jump_stratgey.gd" id="3_mqiol"]
[ext_resource type="Script" uid="uid://dcko1oqsgvhp0" path="res://scripts/weapon_controller/traits/weapon_fire_trait.gd" id="3_qqn0c"]
[ext_resource type="Script" uid="uid://dbpiol4co6gk2" path="res://scripts/character_controller/strategies/hold_strategy.gd" id="4_jbpqc"]
[ext_resource type="Script" uid="uid://bq5twwki1pau1" path="res://scripts/weapon_controller/traits/weapon_reload_trait.gd" id="4_rt3eq"]
[ext_resource type="PackedScene" uid="uid://bolnxnlknqddf" path="res://test_scenes/test_hitscan.tscn" id="5_jbpqc"]

[sub_resource type="GDScript" id="GDScript_jysa6"]
script/source = "extends CharacterController

@onready var weapon_manager: WeaponController = $WeaponController
@onready var jump_strategy: JumpStrategy = get_strategy(JumpStrategy)

func _ready() -> void:
	jump_strategy.active_p = func(): return self.is_on_floor() and Input.is_action_just_pressed(\"jump\")
	
func _input(event: InputEvent) -> void:
	look(event)
	
func _process(delta: float) -> void:
	var camera = get_viewport().get_camera_3d()
	var viewport_size = get_viewport().get_size()
	var origin = camera.project_ray_origin(viewport_size/2)
	var dir = camera.project_ray_normal(viewport_size/2)
	check_focus(origin, dir, Input.is_action_just_pressed(\"interact\"))
	
func _physics_process(delta: float) -> void:
	var idir = Input.get_vector(\"move_left\", \"move_right\", \"move_forward\", \"move_back\")
	move(delta, idir)
"

[sub_resource type="Resource" id="Resource_xhyh2"]
script = ExtResource("2_vsn0d")
always_active = true
default_active = true
metadata/_custom_type_script = "uid://dksuroetqt32s"

[sub_resource type="Resource" id="Resource_qfi37"]
script = ExtResource("3_mqiol")
jump_height = 30.0
always_active = false
default_active = false
metadata/_custom_type_script = "uid://b0jct33h5r1cr"

[sub_resource type="Resource" id="Resource_mdqcp"]
script = ExtResource("4_jbpqc")
always_active = true
default_active = true
metadata/_custom_type_script = "uid://dbpiol4co6gk2"

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_vsn0d"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_mqiol"]

[sub_resource type="GDScript" id="GDScript_vsn0d"]
script/source = "@tool
extends Control

@export var dot_radius = 3.0:
	set(v):
		dot_radius = v
		queue_redraw()
@export var dot_color = Color(0,1,0,1):
	set(v):
		dot_color = v
		queue_redraw()
		
func _draw():
	draw_circle(Vector2.ZERO, dot_radius, dot_color)
"

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("head", "visual", "collision")]
script = SubResource("GDScript_jysa6")
head = NodePath("Head")
visual = NodePath("MeshInstance3D")
collision = NodePath("CollisionShape3D")
strategies = Array[ExtResource("1_rt3eq")]([SubResource("Resource_xhyh2"), SubResource("Resource_qfi37"), SubResource("Resource_mdqcp")])
metadata/_custom_type_script = "uid://cl4kl6fjoxu57"

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_vsn0d")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_mqiol")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.515, -0.515)

[node name="Camera3D" type="Camera3D" parent="Head"]

[node name="Viewmodel" type="Node3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.225, -0.105, 0)

[node name="WeaponController" type="Node3D" parent="." node_paths=PackedStringArray("parent_node")]
script = ExtResource("2_hxpf6")
debug_weapon = ExtResource("5_jbpqc")
ray_collision_mask = null
parent_node = NodePath("../Head/Viewmodel")
metadata/_custom_type_script = "uid://gp7pi5lovebm"

[node name="WeaponFireTrait" type="Node" parent="."]
script = ExtResource("3_qqn0c")
metadata/_custom_type_script = "uid://dcko1oqsgvhp0"

[node name="WeaponReloadTrait" type="Node" parent="."]
script = ExtResource("4_rt3eq")
metadata/_custom_type_script = "uid://bq5twwki1pau1"

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Crosshair" type="Control" parent="HUD"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = SubResource("GDScript_vsn0d")
